language/move-lang/tests/move_check/typing/declare_with_type_annot.move
module 0x8675309::M {
    struct R {f: u64}

    fun t0() {
        let (): ();
        let x: u64;
        let (x, b, R{f}): (u64, bool, R);
    }
}
